--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3.14"
+    "angular": "~1.3.14",
+    "angular-loading-bar": "~0.7.1"
   }
 }
