fixed usage tabs

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "pgconfig",
-  "version": "0.7beta",
+  "version": "1.0",
   "homepage": "https://github.com/sebastianwebber/pgconfig",
   "authors": [
     "Sebastian Webber <swebber@outlook.com>"
