--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "angular": "~1.3.14",
     "angular-loading-bar": "~0.7.1",
-    "angular-animate": "~1.3.14"
+    "angular-animate": "~1.3.14",
+    "angular-numeraljs": "~1.1.6"
   }
 }
