--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular": "~1.3.14",
     "angular-loading-bar": "~0.7.1",
     "angular-animate": "~1.3.14",
-    "angular-numeraljs": "~1.1.6"
+    "angular-numeraljs": "~1.1.6",
+    "highlightjs": "~8.4.0"
   }
 }
