--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular-loading-bar": "~0.7.1",
     "angular-animate": "~1.3.14",
     "angular-numeraljs": "~1.1.6",
-    "highlightjs": "~8.4.0"
+    "highlightjs": "~8.4.0",
+    "bootstrap": "~3.3.2"
   }
 }
