--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "pgconfig",
   "version": "1.3.5",
   "description": "Web Based PostgreSQL configuration tool",
-  "main": "app/index.html",
+  "private": true,
+  "main": "server.js",
   "scripts": {
     "postinstall": "bower install",
     "prestart": "npm install",
-    "start": "http-server -a localhost -p 3680 -c-1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +18,12 @@
   "bugs": {
     "url": "https://github.com/sebastianwebber/pgconfig/issues"
   },
-  "homepage": "https://github.com/sebastianwebber/pgconfig"
+  "homepage": "http://www.pgconfig.org",
+  "engines": {
+    "node": ">= 0.6.0",
+    "npm": ">= 1.0.0"
+  },
+  "dependencies": {
+    "express": "~3.4.4"
+  }
 }
