--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "angular-loading-bar": "^0.9.0",
     "angular-material": "^1.0.8",
-    "angular-route": "^1.5.5",
-    "angular-resource": "^1.5.5"
+    "angular-resource": "^1.5.5",
+    "angular-ui-router": "^0.3.0"
   }
 }
