adding grunt stuff to otimize pages

--- a/package.json
+++ b/package.json
@@ -30,5 +30,23 @@
     "express": "^4.13.4",
     "method-override": "^2.3.6",
     "morgan": "^1.7.0"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-angular-templates": "^1.0.4",
+    "grunt-bower-task": "^0.4.0",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^1.0.1",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-html2js": "^0.3.6",
+    "grunt-rev": "^0.1.0",
+    "grunt-usemin": "^3.1.1",
+    "load-grunt-tasks": "^3.5.0"
   }
 }
