fixing bower and grunt starting at package.json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "description": "PGConfig.org UI",
   "scripts": {
-    "postinstall": "HOME=$HOME/app-root/runtime bower install",
+    "postinstall": "export HOME=$HOME/app-root/runtime ; node_modules/.bin/grunt",
     "prestart": "npm install",
     "start": "node server.js"
   },
@@ -29,24 +29,21 @@
     "bower": "^1.7.9",
     "express": "^4.13.4",
     "method-override": "^2.3.6",
-    "morgan": "^1.7.0"
-  },
-  "devDependencies": {
+    "morgan": "^1.7.0",
     "grunt": "^1.0.1",
+    "grunt-cli": "^1.2.0",
     "grunt-angular-templates": "^1.0.4",
     "grunt-bower-task": "^0.4.0",
-    "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.1",
-    "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-html2js": "^0.3.6",
     "grunt-rev": "^0.1.0",
     "grunt-usemin": "^3.1.1",
     "load-grunt-tasks": "^3.5.0"
+  },
+  "devDependencies": {
   }
 }
