--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "vue": "^2.3.3",
-    "vue-router": "^2.6.0"
+    "vue-router": "^2.6.0",
+    "vuetify": "^0.14.11"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
