--- a/package.json
+++ b/package.json
@@ -1,50 +1,50 @@
 {
-  "name": "pgconfig-ui",
-  "version": "2.0.0",
-  "description": "PGConfig.org UI",
-  "scripts": {
-    "postinstall": "export HOME=$HOME/app-root/runtime ; node_modules/.bin/grunt",
-    "prestart": "npm install",
-    "start": "node server.js"
-  },
-  "main": "server.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sebastianwebber/pgconfig.git"
-  },
-  "keywords": [
-    "pgconfig",
-    "posgtres",
-    "postgresql",
-    "pgsql"
-  ],
-  "author": "Sebastian Webber",
-  "license": "BSD-2-Clause",
-  "bugs": {
-    "url": "https://github.com/sebastianwebber/pgconfig/issues"
-  },
-  "homepage": "https://github.com/sebastianwebber/pgconfig#readme",
-  "dependencies": {
-    "body-parser": "^1.15.1",
-    "bower": "^1.7.9",
-    "express": "^4.13.4",
-    "method-override": "^2.3.6",
-    "morgan": "^1.7.0",
-    "grunt": "^1.0.1",
-    "grunt-cli": "^1.2.0",
-    "grunt-angular-templates": "^1.0.4",
-    "grunt-bower-task": "^0.4.0",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^1.0.1",
-    "grunt-contrib-uglify": "^1.0.1",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-rev": "^0.1.0",
-    "grunt-usemin": "^3.1.1",
-    "load-grunt-tasks": "^3.5.0"
-  },
-  "devDependencies": {
-    "grunt-contrib-connect": "^1.0.2"
-  }
+    "name": "pgconfig-ui",
+    "version": "2.0.0",
+    "description": "PGConfig.org UI",
+    "scripts": {
+        "prestart": "npm install",
+        "start": "node server.js"
+    },
+    "main": "server.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/sebastianwebber/pgconfig.git"
+    },
+    "keywords": [
+        "pgconfig",
+        "posgtres",
+        "postgresql",
+        "pgsql"
+    ],
+    "author": "Sebastian Webber",
+    "license": "BSD-2-Clause",
+    "bugs": {
+        "url": "https://github.com/sebastianwebber/pgconfig/issues"
+    },
+    "homepage": "https://github.com/sebastianwebber/pgconfig#readme",
+    "dependencies": {
+        "body-parser": "^1.15.1",
+        "bower": "^1.7.9",
+        "express": "^4.13.4",
+        "method-override": "^2.3.6",
+        "morgan": "^1.7.0",
+        "grunt": "^1.0.1",
+        "grunt-cli": "^1.2.0",
+        "grunt-angular-templates": "^1.0.4",
+        "grunt-bower-task": "^0.4.0",
+        "grunt-contrib-clean": "^1.0.0",
+        "grunt-contrib-concat": "^1.0.1",
+        "grunt-contrib-copy": "^1.0.0",
+        "grunt-contrib-cssmin": "^1.0.1",
+        "grunt-contrib-uglify": "^1.0.1",
+        "grunt-contrib-watch": "^1.0.0",
+        "grunt-rev": "^0.1.0",
+        "grunt-usemin": "^3.1.1",
+        "load-grunt-tasks": "^3.5.0"
+    },
+    "devDependencies": {
+        "async": "^2.5.0",
+        "grunt-contrib-connect": "^1.0.2"
+    }
 }
